--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,33 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
+annotated-types==0.6.0
 appnope==0.1.4
 asttokens==2.4.1
+attrs==23.2.0
+blis==0.7.11
 boto3==1.34.79
 botocore==1.34.79
+catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpathlib==0.16.0
 comm==0.2.2
+confection==0.1.4
+cymem==2.0.8
+datasets==2.18.0
 debugpy==1.8.1
 decorator==5.1.1
+dill==0.3.8
+en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 executing==2.0.1
 filelock==3.13.3
-fsspec==2024.3.1
+frozenlist==1.4.1
+fsspec==2024.2.0
+huggingface-hub==0.22.2
 idna==3.6
+importlib_metadata==7.1.0
 ipykernel==6.29.4
 ipython==8.23.0
 jedi==0.19.1
@@ -20,35 +36,64 @@ jmespath==1.0.1
 joblib==1.3.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+langcodes==3.3.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+murmurhash==1.0.10
 nest-asyncio==1.6.0
 networkx==3.3
+numpy==1.26.4
 packaging==24.0
+pandas==2.2.1
 parso==0.8.4
 pexpect==4.9.0
 platformdirs==4.2.0
+preshed==3.0.9
 prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==15.0.2
+pyarrow-hotfix==0.6
+pydantic==2.6.4
+pydantic_core==2.16.3
 Pygments==2.17.2
 python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
 pyzmq==25.1.2
 regex==2023.12.25
 requests==2.31.0
 s3transfer==0.10.1
 sacremoses==0.1.1
+safetensors==0.4.2
 sentencepiece==0.2.0
 six==1.16.0
+smart-open==6.4.0
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 stack-data==0.6.3
 sympy==1.12
+thinc==8.2.3
+tokenizers==0.15.2
 torch==2.2.2
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.2
+transformers==4.39.3
+typer==0.9.4
 typing_extensions==4.11.0
+tzdata==2024.1
 urllib3==2.2.1
+wasabi==1.1.2
 wcwidth==0.2.13
+weasel==0.3.4
+xxhash==3.4.1
+yarl==1.9.4
 youtube-transcript-api==0.6.2
+zipp==3.18.1
