--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+absl-py==2.1.0
+accelerate==0.29.2
 aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
@@ -15,43 +17,60 @@ cloudpathlib==0.16.0
 comm==0.2.2
 confection==0.1.4
 cymem==2.0.8
+Cython==3.0.10
 datasets==2.18.0
 debugpy==1.8.1
-decorator==5.1.1
+decorator==4.4.2
 dill==0.3.8
+dtw-python==1.4.2
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+evaluate==0.4.1
+evaluation==0.0.2
 executing==2.0.1
 filelock==3.13.3
 frozenlist==1.4.1
 fsspec==2024.2.0
+glog==0.3.1
 huggingface-hub==0.22.2
 idna==3.6
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
 importlib_metadata==7.1.0
 ipykernel==6.29.4
 ipython==8.23.0
+ipywidgets==8.1.2
 jedi==0.19.1
 Jinja2==3.1.3
 jmespath==1.0.1
 joblib==1.3.2
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+jupyterlab_widgets==3.0.10
 langcodes==3.3.0
+llvmlite==0.42.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
+more-itertools==10.2.0
+moviepy==1.0.3
 mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.16
 murmurhash==1.0.10
 nest-asyncio==1.6.0
 networkx==3.3
+nltk==3.8.1
+numba==0.59.1
 numpy==1.26.4
+openai-whisper==20231117
 packaging==24.0
 pandas==2.2.1
 parso==0.8.4
 pexpect==4.9.0
+pillow==10.3.0
 platformdirs==4.2.0
 preshed==3.0.9
+proglog==0.1.10
 prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
@@ -60,16 +79,23 @@ pyarrow==15.0.2
 pyarrow-hotfix==0.6
 pydantic==2.6.4
 pydantic_core==2.16.3
+pydub==0.25.1
 Pygments==2.17.2
 python-dateutil==2.9.0.post0
+python-gflags==3.1.2
+pytube==15.0.0
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
 regex==2023.12.25
 requests==2.31.0
+responses==0.18.0
+rouge==1.0.1
+rouge-score==0.1.2
 s3transfer==0.10.1
 sacremoses==0.1.1
 safetensors==0.4.2
+scipy==1.13.0
 sentencepiece==0.2.0
 six==1.16.0
 smart-open==6.4.0
@@ -80,6 +106,7 @@ srsly==2.4.8
 stack-data==0.6.3
 sympy==1.12
 thinc==8.2.3
+tiktoken==0.6.0
 tokenizers==0.15.2
 torch==2.2.2
 tornado==6.4
@@ -93,6 +120,8 @@ urllib3==2.2.1
 wasabi==1.1.2
 wcwidth==0.2.13
 weasel==0.3.4
+whisper-timestamped @ git+https://github.com/linto-ai/whisper-timestamped@5d4fdaa93e9c6e1b8d3152903993c85f5c7c0334
+widgetsnbextension==4.0.10
 xxhash==3.4.1
 yarl==1.9.4
 youtube-transcript-api==0.6.2
