--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,74 @@
+annotated-types==0.7.0
 av==12.1.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+confection==0.1.5
+cymem==2.0.8
+Cython==3.0.10
+decorator==4.4.2
+dtw-python==1.5.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+filelock==3.14.0
+fsspec==2024.6.0
+huggingface-hub==0.23.3
+idna==3.7
+imageio==2.34.1
+imageio-ffmpeg==0.5.1
+iniconfig==2.0.0
+Jinja2==3.1.4
+langcodes==3.4.0
+language_data==1.2.0
+llvmlite==0.42.0
+marisa-trie==1.2.0
+MarkupSafe==2.1.5
+more-itertools==10.2.0
+moviepy==1.0.3
+mpmath==1.3.0
+murmurhash==1.0.10
+networkx==3.3
+numba==0.59.1
 numpy==1.26.4
+openai-whisper==20231117
+opencv-python==4.10.0.82
+packaging==24.0
 pandas==2.2.2
+pillow==10.3.0
+pluggy==1.5.0
+preshed==3.0.9
+proglog==0.1.10
+pydantic==2.7.3
+pydantic_core==2.18.4
 pydub==0.25.1
+pytest==8.2.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+regex==2024.5.15
+requests==2.32.3
+safetensors==0.4.3
+scipy==1.13.1
+setuptools==70.0.0
+six==1.16.0
+smart-open==6.4.0
 spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+sympy==1.12.1
+thinc==8.2.4
+tiktoken==0.7.0
+tokenizers==0.19.1
 torch==2.3.0
 tqdm==4.66.4
 transformers==4.41.2
-whisper_timestamped==1.15.4
-pillow==10.3.0
-moviepy==1.0.3
+typer==0.9.4
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.1
+wasabi==1.1.3
+weasel==0.3.4
+whisper-timestamped==1.15.4
